# wasm-workspace-t

./: .env  .gitignore  README.md
wasm-client/: Cargo.toml  LICENSE_MIT
wasm-client/src/: lib.rs
wasm-client/src/models/: course.rs
webapp/: .env  Cargo.toml
webapp/src/: errors.rs  handler.rs  mod.rs  models.rs  routers.rs
webapp/static/: register.html  teachers.html
webservice/: Cargo.toml
webservice/src/: db_access-origin.rs  errors.rs  handlers-origin.rs  routers.rs  state.rs
webservice/src/db_access/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  mod.rs  teacher.rs
webservice/src/models/: course.rs  mod.rs  teacher.rs
